# ZEnvVault

./: CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_lock.rs  env_parser.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: auth.rs  backup.rs  clipboard.rs  config.rs  import_export.rs  mod.rs  projects.rs  search.rs  tiers.rs  variables.rs
src-tauri/src/crypto/: aes_gcm.rs  argon2.rs  mod.rs  random.rs
src-tauri/src/db/: migrations.rs  models.rs  queries.rs
src/components/auth/: LockScreen.tsx  SetupScreen.tsx
src/components/diff/: TierDiffView.tsx
src/components/import-export/: ExportDialog.tsx  ImportModal.tsx
src/components/layout/: MainPanel.tsx  Sidebar.tsx  StatusBar.tsx  Titlebar.tsx
src/components/projects/: ProjectModal.tsx
src/components/search/: CommandPalette.tsx
src/components/settings/: SettingsModal.tsx
src/components/tour/: TourOverlay.tsx
src/components/ui/: Badge.tsx  Button.tsx  ContextMenu.tsx  ErrorBoundary.tsx  Input.tsx  Modal.tsx  PasswordStrengthMeter.tsx  ProjectIcon.tsx  Textarea.tsx  Toast.tsx  Toggle.tsx  ZLogo.tsx
src/components/variables/: BulkActionBar.tsx  (+6 more)
src/lib/: constants.ts  passwordStrength.ts  tauri.ts  typeValidators.ts  utils.ts
src/store/: authStore.ts  configStore.ts  projectStore.ts  tourStore.ts  uiStore.ts
src/styles/: animations.css  reset.css  tokens.css  typography.css
src/types/: index.ts
