[package]
name = "zvault"
version = "0.4.0"
edition = "2021"

[lib]
name = "zvault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
secrecy = { version = "0.8", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
zeroize = { version = "1", features = ["derive"] }
subtle = "2"
thiserror = "1"
base64 = "0.22"

[package.metadata.tauri]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
